--- a/contact.html
+++ b/contact.html
@@ -7,13 +7,7 @@
   </head>
   <style>
     .body {
-      background-image: url("");
-      /* Full height */
-      height: 100%;
-      /* Center and scale the image nicely */
-      background-position: 20;
-      background-repeat: no-repeat;
-      background-size: 100%;
+      background-color: aqua;
     }
     .styleText {
       text-align: center;
@@ -32,9 +26,10 @@
       src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQc9nArY_40IgEMGneE2urAY2T9fac70oczhSQqprH9RuiMfTAzwj0bz4rYYg-j984tS6k"
       style="margin-left: auto; display: block; margin-right: auto"
     />
-    <h3 class="styleText">Kong Kanjai</h3>
-    <div>
-      <p class="styleText">Hi my name is Kong. Nice to meet you! นะไอ้ฉองงงง</p>
-    </div>
+    <h3 class="styleText">Contact</h3>
+    <p class="styleText">IG: kongkongkongkongkong_</p>
+    <p class="styleText">FB: K'Kong</p>
+    <p class="styleText">Line: Hellworker</p>
+    <p class="styleText">Phone: 0840040480</p>
   </body>
 </html>
