--- a/exp.html
+++ b/exp.html
@@ -11,9 +11,9 @@
         >&times;</a
       >
       <div class="overlay-content">
-        <a href="/index.html">Home</a>
-        <a href="/exp.html">Experience</a>
-        <a href="/contact.html">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="exp.html">Experience</a>
+        <a href="contact.html">Contact</a>
       </div>
     </div>
     <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
