--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         >&times;</a
       >
       <div class="overlay-content">
-        <a href="/index.html">Home</a>
-        <a href="/exp.html">Experience</a>
-        <a href="/contact.html">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="exp.html">Experience</a>
+        <a href="contact.html">Contact</a>
       </div>
     </div>
     <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
@@ -66,6 +66,24 @@
         <p class="styleText">
           Thank you for your time, and I'm excited to connect with all of you!
         </p>
+        <h3 class="styleText ; glow2">My Skills</h3>
+
+        <p>HTML</p>
+        <div class="container">
+          <div class="skills html">60%</div>
+        </div>
+
+        <p>CSS</p>
+        <div class="container">
+          <div class="skills css">60%</div>
+        </div>
+
+        <p>JavaScript</p>
+        <div class="container">
+          <div class="skills js">65%</div>
+        </div>
+
+        </div>
       </div>
     </div>
   </body>
