--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
       <div>
         <p class="styleText">
           Good day everyone, I'm Kong Kanjai, a 19-year-old student from Chiang
-          Mai University,
+          Mai University, specializing in Computer Engineering.
         </p>
 
         <p class="styleText">
-          specializing in Computer Engineering. When I'm not focused on my
+          When I'm not focused on my
           studies, you can often find me playing basketball,
         </p>
 
