--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
         </p>
         <h3 class="styleText ; glow2">My Skills</h3>
 
+        <p class="styleText">
+          I have a variety of skills I can play international chess well. with a score level of 1500
+          
+        </p>
+        <p class="styleText">And I can play many instruments. And I can still code in more than 2 languages.</p>
         <p>HTML</p>
         <div class="container">
           <div class="skills html">60%</div>
