--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
           
         </p>
         <p class="styleText">And I can play many instruments. And I can still code in more than 2 languages.</p>
-        <p>HTML</p>
+        <p>HTML & CSS </p>
         <div class="container">
           <div class="skills html">60%</div>
         </div>
 
-        <p>CSS</p>
+        <p>C++ & Java</p>
         <div class="container">
-          <div class="skills css">60%</div>
+          <div class="skills cjava">60%</div>
         </div>
 
         <p>JavaScript</p>
