--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>ทดสอบการใช้ google font for web devbanban.com</title>
+   
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@300&display=swap" rel="stylesheet">
+   
+    <style type="text/css">
+      body{
+        font-family: 'Mitr', sans-serif;
+      }
+    </style>
+
   </head>
   <body>
     <div id="myNav" class="overlay">
@@ -15,6 +27,7 @@
         <a href="index.html">Home</a>
         <a href="exp.html">Experience</a>
         <a href="contact.html">Contact</a>
+        <a href="gallery.html">Gallery</a>
       </div>
     </div>
     <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
@@ -40,10 +53,26 @@
 
   </div>
   <body>
-    <p style="text-align: center; font-size: 20px ; color: aliceblue ;" class="glow2">
-      E-mail : <a href="mailto:Kong_K@cmu.ac.th"> Kong_K@cmu.ac.th </a>
+    <p style="text-align: center; font-size: 20px ; color: aliceblue ;" class="glow3">
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail-fast" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <path d="M3 7h3"></path>
+        <path d="M3 11h2"></path>
+        <path d="M9.02 8.801l-.6 6a2 2 0 0 0 1.99 2.199h7.98a2 2 0 0 0 1.99 -1.801l.6 -6a2 2 0 0 0 -1.99 -2.199h-7.98a2 2 0 0 0 -1.99 1.801z"></path>
+        <path d="M9.8 7.5l2.982 3.28a3 3 0 0 0 4.238 .202l3.28 -2.982"></path>
+     </svg> Email : <a href="mailto:Kong_K@cmu.ac.th"> Kong_K@cmu.ac.th </a>
       <br>
-      Tel : 084-004-0480
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <path d="M4 4m0 4a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z"></path>
+        <path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"></path>
+        <path d="M16.5 7.5l0 .01"></path>
+     </svg>IG : <a href="https://www.instagram.com/kongkongkongkongkong_/"> kongkongkongkongkong_ </a>
+      <br>
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook-filled" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <path d="M18 2a1 1 0 0 1 .993 .883l.007 .117v4a1 1 0 0 1 -.883 .993l-.117 .007h-3v1h3a1 1 0 0 1 .991 1.131l-.02 .112l-1 4a1 1 0 0 1 -.858 .75l-.113 .007h-2v6a1 1 0 0 1 -.883 .993l-.117 .007h-4a1 1 0 0 1 -.993 -.883l-.007 -.117v-6h-2a1 1 0 0 1 -.993 -.883l-.007 -.117v-4a1 1 0 0 1 .883 -.993l.117 -.007h2v-1a6 6 0 0 1 5.775 -5.996l.225 -.004h3z" stroke-width="0" fill="currentColor"></path>
+     </svg>FB : <a href="https://www.facebook.com/KongXIV?mibextid=LQQJ4d"> K'Kong </a>
     </p>
     <div>
       <br />
