--- a/exp.html
+++ b/exp.html
@@ -4,6 +4,27 @@
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>ทดสอบการใช้ google font for web devbanban.com</title>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mitr:wght@300&display=swap"
+      rel="stylesheet"
+    />
+
+    <style type="text/css">
+      body {
+        font-family: "Mitr", sans-serif;
+      }
+    </style>
   </head>
   <body>
     <div id="myNav" class="overlay">
@@ -14,6 +35,7 @@
         <a href="index.html">Home</a>
         <a href="exp.html">Experience</a>
         <a href="contact.html">Contact</a>
+        <a href="gallery.html">Gallery</a>
       </div>
     </div>
     <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
