--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       
       <div class="d-flex justify-content-center align-items-center mx-auto gap-3" style="max-width: 700px">
         <div>
-          <img src="images/kd.jpg" class="rounded-circle" width="200" height="200" style="object-fit: cover">
+          <img src="images/KD.jpg" class="rounded-circle" width="200" height="200" style="object-fit: cover">
         </div>
   
         <div class="d-none d-sm-block">
